WIP on saving state to JSON then loading that page on startup

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Trello</title>
   </head>
   <body style="width: 100%; height: 100%; margin: 0;">
-    <webview id="trello" src="https://www.trello.com/" autosize style="width: 100%; height: 100%;"></webview>
+    <span class="indicator"></span>
+    <webview id="trello" src="https://trello.com" autosize style="width: 100%; height: 100%;"></webview>
   </body>
 
   <script>
