Move styles into stylesheet

--- a/index.html
+++ b/index.html
@@ -1,34 +1,9 @@
 <!DOCTYPE html>
-<html style="width: 100%; height: 100%;">
+<html>
   <head>
     <meta charset="UTF-8">
     <title>Trello</title>
-
-    <style>
-      body {
-        width: 100%; height: 100%; margin: 0;
-        background: #0079BF;
-        display: flex;
-        align-items: center;
-      }
-      .loader {
-        background-image: url("loader.gif");
-        background-size: 18px 18px;
-        display: none;
-        height: 18px;
-        width: 18px;
-        position: absolute;
-        left: 50%;
-      }
-      .loader.is-loading {
-        display: block;
-        margin: 0 auto;
-      }
-      webview {
-        width: 100%;
-        height: 100%;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <span class="loader"></span>
