Icon update, homepage fix, background colour

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <span class="loader"></span>
-    <webview id="webview" src="https://overcast.fm/" autosize></webview>
+    <webview id="webview" src="https://overcast.fm/podcasts" autosize></webview>
   </body>
 
   <script>
