Minor menu bar scroll fix

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <span class="loader"></span>
+    <div class="title-bar">
+      <!-- <span class="title-bar__logo"></span> -->
+    </div>
     <webview id="webview" src="https://overcast.fm/podcasts" autosize></webview>
   </body>
 
